fixed home page text to stay on two separate lines when the page is too wide

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -98,3 +98,9 @@ input#entry:focus{
   width:100%;
   margin: auto;
 }
+
+@media screen and (min-width: 1350px) {
+  .intro-text {
+    max-width: 600px;
+  }
+}
